Some bugs from Bug-list 3.0 fixed: [*] Align social icons in footer relative to Follow Us phrase(under);

--- a/src/less/components/footer.less
+++ b/src/less/components/footer.less
@@ -49,6 +49,7 @@
                 color: @icon-grey;
                 text-align: center;
                 margin-right: 20px;
+                margin-left: -7px;
 
                 &:hover {
                     color: @icon-hover-grey;
